<resources>
    <string name="app_name">RPGAssistant</string>
    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_to_create">Create User</string>
    <string name="create_username">Username</string>
    <string name="create_email">E-Mail</string>
    <string name="create_password">Password</string>
    <string name="create_button">Create User</string>
    <string name="create_to_login">Login</string>
    <string name="RPGAssistantSharedPreferences">RPGAssistantSharedPreferences</string>
    <string name="prefCurrentUserEmailKey">prefCurrentUserEmailKey</string>
    <string name="prefStayLoggedInKey">Stay Logged In</string>
    <string name="or">or</string>
    <string name="gm_game_story">Game Story</string>
    <string name="gm_game_characters">Game Characters</string>
    <string name="gm_player_actions">Player Actions</string>
    <string name="gm_character_list">Character List</string>
    <string name="cm_character_info">Character Info</string>
    <string name="cm_character_story">Character Story</string>
    <string name="cm_skill_list">Skill List</string>
    <string name="inv_item_name">Item Name</string>
    <string name="cjg_join_game">Join Game</string>
    <string name="cjg_invite_code">Invite Code</string>
    <string name="cjg_create_game">Create Game</string>
    <string name="cjg_game_name">Game Name</string>
    <string name="stgs_choose_theme">Choose Theme</string>
    <string name="stgs_notification_preferences">Notification Preferences</string>
    <string name="stgs_game_settings">Game Settings</string>
    <string name="stgs_sync_games">Sync Games</string>
    <string name="stgs_sign_out">Sign Out</string>
    <string name="stgs_settings_menu">Settings Menu</string>
    <string name="gstgs_allowViewCharactersKey">allowViewCharactersKey</string>
    <string name="gstgs_allow_view_characters">Allow users to view characters</string>
    <string name="gstgs_allowInviteKey">allowInviteKey</string>
    <string name="gstgs_allow_invite">Allow users to invite</string>
    <string name="gstgs_viewBalanceKey">viewBalanceKey</string>
    <string name="gstgs_view_balance">View Balance</string>
    <string name="gstgs_transferItemsKey">transferItemsKey</string>
    <string name="gstgs_transfer_items">Transfer Items</string>
    <string name="gstgs_transferMoneyKey">transferMoneyKey</string>
    <string name="gstgs_transfer_money">Transfer Money</string>
    <string name="gstgs_customSkillValuesKey">customSkillValuesKey</string>
    <string name="gstgs_custom_skill_values">Custom skill differences</string>
    <string name="nfs_collaboratorsEditKey">collaboratorsEditKey</string>
    <string name="nfs_collaborators_edit">Collaborators Edit</string>
    <string name="nfs_inviteKey">inviteKey</string>
    <string name="nfs_invite">Invite</string>
    <string name="bal_account">Account</string>
    <string name="bal_on_person">On Person</string>
    <string name="ni_name">Name</string>
    <string name="ni_tradableKey">tradableKey</string>
    <string name="ni_tradable">Tradable?</string>
    <string name="ni_create">Create</string>
    <string name="ns_skill_name">Skill Name</string>
    <string name="ns_point_value">Point Value</string>
    <string name="ns_create">Create</string>
    <string name="dice_2">2</string>
    <string name="dice_6">6</string>
    <string name="dice_8">8</string>
    <string name="dice_10">10</string>
    <string name="dice_20">20</string>
    <string name="dice_50">50</string>
    <string name="dice_100">100</string>
    <string name="dice_4">4</string>
    <string name="crc_character_name">Character Name</string>
    <string name="crc_create_character">Create</string>
    <string name="user_email"></string>
</resources>
