<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingActivities.GameOptionsActivity">

    <Switch
        android:id="@+id/switch3"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_transfer_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch4" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_view_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch5" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_allow_invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch6" />

    <Switch
        android:id="@+id/switch6"
        android:layout_width="389dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_allow_view_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <Switch
        android:id="@+id/switch7"
        android:layout_width="387dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_custom_skill_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="388dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:text="@string/gstgs_transfer_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>